# soldank-plus-plus

./: .claudeignore  .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  legacy-build.sh  vcpkg.json
source/client/: CMakeLists.txt  main.cpp  stb.cpp
source/client/application/: Application.cpp  Application.hpp  ClientModes.cpp  LaunchParameters.cpp
source/client/application/cli/: CommandLineParameters.cpp  CommandLineParameters.hpp
source/client/application/config/: ClientConfig.hpp  Config.hpp
source/client/application/input/: ApplicationInputController.cpp  InputRouter.cpp  InputSnapshot.cpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  PlatformInput.cpp  PlayerInput.cpp  Shortcut.cpp
source/client/application/platform/: ClientTransportStartup.cpp  WebAssemblyStartupAdapter.cpp
source/client/application/window/: Window.cpp  Window.hpp  WindowBackendAdapter.cpp
source/client/editor/: EditorSession.cpp  PlayTestSession.cpp
source/client/gameplay/: GameSession.cpp  PlayerController.cpp
source/client/map_editor/: EditorAssetBrowser.cpp  EditorCommandHistory.cpp  EditorDocument.cpp  EditorEventRouter.cpp  EditorMapProperties.cpp  EditorShortcutController.cpp  EditorToolController.cpp  EditorUiOptions.cpp  EditorViewportController.cpp  MapEditor.cpp  MapEditor.hpp  MapEditorConfig.cpp
source/client/map_editor/actions/: AddObjectsMapEditorAction.cpp  AddObjectsMapEditorAction.hpp  AddPolygonMapEditorAction.cpp  AddPolygonMapEditorAction.hpp  AddSceneryMapEditorAction.cpp  AddSceneryMapEditorAction.hpp  AddSpawnPointMapEditorAction.cpp  AddSpawnPointMapEditorAction.hpp  ColorObjectsMapEditorAction.cpp  ColorObjectsMapEditorAction.hpp  MapEditorAction.cpp  MapEditorAction.hpp  MoveSelectionMapEditorAction.cpp  MoveSelectionMapEditorAction.hpp  RemoveSelectionMapEditorAction.cpp  RemoveSelectionMapEditorAction.hpp  ReorderSelectionMapEditorAction.cpp  RotateSelectionMapEditorAction.cpp  RotateSelectionMapEditorAction.hpp  ScaleSelectionMapEditorAction.cpp  ScaleSelectionMapEditorAction.hpp  TransformPolygonsMapEditorAction.cpp  TransformPolygonsMapEditorAction.hpp  TransformSceneriesMapEditorAction.cpp  TransformSceneriesMapEditorAction.hpp  TransformSpawnPointsMapEditorAction.cpp  TransformSpawnPointsMapEditorAction.hpp
source/client/map_editor/tools/: ColorPickerTool.cpp  ColorPickerTool.hpp  ColorTool.cpp  ColorTool.hpp  DummyTool.cpp  DummyTool.hpp  PolygonTool.cpp  PolygonTool.hpp  SceneryTool.cpp  SceneryTool.hpp  SelectionTool.cpp  SelectionTool.hpp  SpawnpointTool.cpp  SpawnpointTool.hpp  TextureTool.cpp  TextureTool.hpp  Tool.cpp  Tool.hpp  TransformTool.cpp  TransformTool.hpp  VertexColorTool.cpp  VertexColorTool.hpp  VertexSelectionTool.cpp  VertexSelectionTool.hpp  WaypointTool.cpp  WaypointTool.hpp
source/client/networking/: Connection.cpp  IConnection.cpp  INetworkingClient.cpp  InputApplicationTimeline.cpp  NetworkClientSession.cpp  NetworkingClient.cpp  ReconciliationTimeline.cpp
source/client/networking/browser/: WebRtcBrowserConnection.cpp  webrtc_bridge.js
source/client/networking/event_handlers/: AssignPlayerIdNetworkEventHandler.cpp  HitSoldierNetworkEventHandler.cpp  KillSoldierNetworkEventHandler.cpp  PingCheckNetworkEventHandler.cpp  PlayerLeaveNetworkEventHandler.cpp  ProjectileSpawnNetworkEventHandler.cpp  ProjectileSpawnNetworkEventHandler.hpp  SoldierInfoNetworkEventHandler.cpp  SoldierStateNetworkEventHandler.cpp  SpawnSoldierNetworkEventHandler.cpp
source/client/networking/interface/: NetworkingInterface.cpp
source/client/networking/transport/: ClientTransportAdapter.cpp
source/client/rendering/: ClientState.cpp  ClientState.hpp  RenderPipeline.cpp  Scene.cpp  Scene.hpp
source/client/rendering/components/: Camera.cpp  Camera.hpp
source/client/rendering/data/: Texture.cpp  Texture.hpp
source/client/rendering/gpu/: GpuBuffer.cpp
source/client/rendering/renderer/: BackgroundRenderer.cpp  BackgroundRenderer.hpp  BulletRenderer.cpp  CircleRenderer.cpp  ItemRenderer.cpp  LineRenderer.cpp  PolygonOutlinesRenderer.cpp  PolygonOutlinesRenderer.hpp  PolygonsRenderer.cpp  PolygonsRenderer.hpp  RectangleRenderer.cpp  RectangleRenderer.hpp  Renderer.cpp  SceneriesRenderer.cpp  SceneriesRenderer.hpp  SceneryOutlinesRenderer.cpp  SceneryOutlinesRenderer.hpp  SoldierRenderer.cpp  TextRenderer.cpp  TextRenderer.hpp
source/client/runtime/: ClientRuntime.cpp
source/client/simulation/: ClientSimulationEventRouter.cpp
source/server/: CMakeLists.txt  main.cpp
source/server/application/: Application.cpp  ServerBootstrap.cpp  ServerConfig.cpp  ServerConfigLoader.cpp  ServerState.cpp  ServerState.hpp
source/server/events/: ServerEvent.cpp
source/server/networking/: CoreEventsConnectionNotifier.cpp  GameServer.cpp  IGameServer.cpp  LobbyClient.cpp  ServerNetworkHost.cpp
source/server/replication/: ReplicationService.cpp
source/server/runtime/: ServerCommandQueues.cpp  ServerRuntime.cpp  ServerRuntimeServices.cpp  ServerSimulationEventRouter.cpp
source/server/scripting/: IScriptingEngine.cpp
source/server/sessions/: PlayerSessionManager.cpp
source/shared/: CMakeLists.txt
source/shared/communication/: DeliveryMode.cpp  NetworkEvent.cpp  NetworkEventDispatcher.cpp  NetworkMessage.cpp  NetworkPackets.cpp  NetworkPackets.hpp  PingTimer.cpp  ProtocolConversions.cpp
source/shared/core/: CoreEventHandler.cpp  IWorld.cpp  IWorld.hpp  World.cpp  World.hpp  WorldEvents.cpp  WorldEvents.hpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt
tests/client/map_editor/: MapEditorActionsTest.cpp  MapEditorControllersTest.cpp  MapEditorToolsTest.cpp
tests/client/networking/: FullClientServerReconciliationTest.cpp  InputApplicationTimelineTest.cpp  NetworkedInputSimulationTest.cpp  ReconciliationTimelineTest.cpp
tests/shared/: CMakeLists.txt
tests/shared/communication/: NetworkEventDispatcherTest.cpp  NetworkMessageTest.cpp
tests/shared/runtime/: ServerCommandQueuesTest.cpp
tests/testing_frameworks/shared_lib_testing/: CMakeLists.txt  MapBuilder.cpp
(+198 files in other folders)
